fix: adds some spacing to articles show page between nearby cases and map.

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -240,3 +240,7 @@
 #unfollow-button {
   font-size: small;
 }
+
+.nearby-cases {
+  margin-bottom: 30px;
+}
